--- a/style.css
+++ b/style.css
@@ -18,13 +18,13 @@ h1 {
     background-color: #E55126;
 }
 
-.skill-js {
+/*.skill-js {
     background-color: #E5A227;
 }
 
 .skill-jquery {
     background-color: #0C73B8;
-}
+}*/
 
 .skill-html,
 .skill-js,
